Migrate libcamera-4j from JNI to Foreign Function & Memory API
Replace the hand-written JNI C++ layer with a flat C-ABI shim (libcamera4j.h)
bound from Java via the FFM API (Project Panama). The libcamera logic, handle
maps, mmap buffer access and completion polling are unchanged — only the
language boundary differs.

- Rewrite the native shim as extern "C" functions (lc4j_*) with no jni.h
  dependency; add libcamera4j.h declaring the C ABI.
- Add Native.java: cached downcall MethodHandles + typed wrappers for all
  native entry points, with Arena-based string/array marshalling.
- NativeLoader resolves a SymbolLookup (system path, then bundled .so) via
  SymbolLookup.libraryLookup instead of System.load.
- Convert all binding classes (CameraManager, Camera, CameraConfiguration,
  FrameBufferAllocator, Request, FrameBuffer) to FFM calls; drop native decls.
- Zero-copy frame access via MappedFrame (MemorySegment over the mmap'd
  buffer); getData() reimplemented on top of it, dropping the byte[] copy.
- Drop JNI from CMake/Dockerfile; document --enable-native-access requirement.
- Add camera-free tests (ZeroCopyConverterTest) and an in-container FFM smoke
  check (Smoke + Dockerfile.smoke); ffm-analysis.md records the rationale.

Native shim builds against libcamera 0.7.1 (ARM64); capture verified on a
Raspberry Pi.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>